--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
       <div class="audio">
          <audio controls>
          <source src="podcast.mp3" type="audio/mpeg">
+            Seu navegador não suporta esse tipo de áudio
          </audio>
       </div>
     </div>
@@ -179,6 +180,7 @@
       <div class="video">
          <video width="640" height="360" controls>
             <source src="video.mp4" type="video/mp4" />
+            Seu navegador não suporta esse tipo de vídeo
          </video>
       </div>
     </div>
