--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
          <h2>Desenvolvimento de hábitos saudáveis</h2>
          <p>Hábitos saudáveis são rotinas que incluem tempo e compromisso com uma tarefa ou estilo de vida benéficos para a saúde.</p>
          <center>
-         <img src="img2.webp" alt="EAN" width="1024" height="383">
+         <img src="img2.jpg" alt="habitos saudaveis" width="1000" height="417">
          </center>
     </div>
 
